// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableMessage bordered is rendered 1`] = `
<div
  class="euiText euiText--extraSmall euiSelectableMessage euiSelectableMessage--bordered"
>
  <div
    class="euiTextColor euiTextColor--subdued"
  />
</div>
`;

exports[`EuiSelectableMessage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText euiText--extraSmall euiSelectableMessage testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiTextColor euiTextColor--subdued"
  />
</div>
`;
